# ProbabilityTheoryModeling

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci_tests.yml
cmake/: IncludeExternalLibraries.cmake  SetCompilerOptions.cmake
lib/: CMakeLists.txt
lib/distributions/: BernoulliDistribution.cpp  BernoulliDistribution.hpp  BinomialDistribution.cpp  BinomialDistribution.hpp  CauchyDistribution.cpp  CauchyDistribution.hpp  Distribution.hpp  DistributionExperiment.cpp  DistributionExperiment.hpp  ExperimentStats.hpp  ExponentialDistribution.cpp  ExponentialDistribution.hpp  GeometricDistribution.cpp  GeometricDistribution.hpp  LaplaceDistribution.cpp  LaplaceDistribution.hpp  NormalDistribution.cpp  NormalDistribution.hpp  PoissonDistribution.cpp  PoissonDistribution.hpp  UniformDistribution.cpp  UniformDistribution.hpp
lib/law-of-large-numbers/: CMakeLists.txt  LLNPathEntry.hpp  LLNPathResult.hpp  LawOfLargeNumbersSimulator.cpp  LawOfLargeNumbersSimulator.hpp
lib/markov-chain/: MarkovChain.cpp  MarkovChain.hpp  MarkovTextModel.cpp
lib/mylib/: MyClass.cpp  MyClass.hpp
lib/sigma-algebra/: CMakeLists.txt  DiscreteRandomVariable.cpp  DiscreteRandomVariable.hpp  Event.cpp  Event.hpp  OutcomeSpace.cpp  OutcomeSpace.hpp  ProbabilityMeasure.cpp  SigmaAlgebra.cpp  (+2 more)
tests/: CMakeLists.txt  distributions_tests.cpp  law_of_large_numbers_tests.cpp  main_test.cpp  markov_chain_tests.cpp  sigma_algebra_tests.cpp  test_functions.hpp  unit_tests.cpp
tests/test_suites/: ProjectIntegrationTestSuite.cpp  ProjectIntegrationTestSuite.hpp
(+2 files in other folders)
